# 2023_SK_talk

./: README.md
old_talk_model/: README.md  child_act.csv  gpt_KL.py  gpt_KL2.py  gpt_analisys.py  gpt_call.py  gpt_child_act.py  gpt_child_act2.py  gpt_child_obs.py  gpt_child_obs2.py  gpt_generate.py  gpt_graph.py  gpt_graph2.py  gpt_parent_act.py  gpt_parent_act2.py  gpt_parent_obs.py  gpt_parent_obs2.py  gpt_start.py  gpt_talk.py  gpt_talk2.py  log(qs)2_parent_state.csv  log(qs)_parent_state.csv  parent_act.csv  parent_talk.py  pymdp_talk.py  pyproject.toml  qs2_parent_state.csv  qs_parent_action.csv  qs_parent_state.csv  test.py
old_talk_model/data/: G.npy  child_obs.npy  child_state.npy  init_data.npy  parent_obs.npy  parent_state.npy  qpi.npy  qs_action.npy  qs_logx.npy  qs_x.npy
old_talk_model/data2/: G.npy  child_obs.npy  child_state.npy  init_data.npy  parent_obs.npy  parent_state.npy  qpi.npy  qs_logx.npy  qs_x.npy
old_talk_model/memo/: 20231030.md
talk_model/: .gitignore  README.md  gpt_child_act.py  gpt_child_obs.py  gpt_parent_act.py  gpt_talk.py  likelihood.py
talk_model/A/csv/: [-1, -1].csv  [-1, -2].csv  [-1, -3].csv  [-1, -4].csv  [-1, -5].csv  [-1, 0].csv  [-1, 1].csv  [-1, 2].csv  [-1, 3].csv  [-1, 4].csv  [-1, 5].csv  [-2, -1].csv  [-2, -2].csv  [-2, -3].csv  [-2, -4].csv  [-2, -5].csv  [-2, 0].csv  [-2, 1].csv  [-2, 2].csv  [-2, 3].csv  [-2, 4].csv  [-2, 5].csv  [-3, -1].csv  [-3, -2].csv  [-3, -3].csv  [-3, -4].csv  [-3, -5].csv  [-3, 0].csv  [-3, 1].csv  [-3, 2].csv  [-3, 3].csv  (+90 more)
tokkaken/: AI_main.py  P_talk.py  README.md  pyproject.toml
(+121 files in other folders)
